back to intellij after finished gui